# t-remote-desktop

./: .gitignore  CMakeLists.txt
app/client/: CMakeLists.txt  main.cpp
app/host/: CMakeLists.txt  main.cpp
core/network/: CMakeLists.txt
core/network/include/network/: tcpSocket.h
core/network/src/: CMakeLists.txt  tcpSocket.cpp
network/: CMakeLists.txt
network/protocol/: CMakeLists.txt
network/protocol/include/protocol/: Transport.h
network/protocol/src/: Transport.cpp
network/tcp/: CMakeLists.txt
network/tcp/include/tcp/: Server.h  ServerSocket.h  Socket.h
network/tcp/src/: Server.cpp  ServerSocket.cpp  Socket.cpp
network/tcp/src/windows/: ConnectionSocketWinImpl.cpp  ConnectionSocketWinImpl.h  ListeningSocketWinImpl.cpp  ListeningSocketWinImpl.h  WindowServerSocket.cpp  WindowsContext.h
